fixed margin top on mobile view

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
     justify-content: center;
     align-items: center;
     margin: 0;
-    height: 100vh;
+    /* height: 100vh; */
     background: bisque;
 
 }
